work done while waiting an extra 2h for the doctor to show up at an appointment

--- a/references.bib
+++ b/references.bib
@@ -292,3 +292,80 @@ author = {Ravid Shwartz-Ziv and Amitai Armon}
 	title = {Deep Neural Networks and Tabular Data: A Survey},
 	journal = {{IEEE} Transactions on Neural Networks and Learning Systems}
 }
+
+@Article{Quinlan1993p1150,
+  Author = {J. Ross Quinlan},
+  Journal = {Proceedings of the Tenth International Conference on Machine Learning},
+  Pages = {236-243},
+  Title = {Combining Instance-Based and Model-Based Learning},
+  Year = {1993}
+}
+
+
+@Book{tmwr,
+  Author = {Max Kuhn and Julia Silge},
+  Publisher = {O'Reilly Media, Inc.},
+  Title = {Tidy Modeling with {R}},
+  Year = {2022}
+}
+
+@article{joseph2016space,
+  title={Space-filling designs for computer experiments: {A} review},
+  author={Joseph, V},
+  journal={Quality Engineering},
+  volume={28},
+  number={1},
+  pages={28--35},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+@article{husslage2011space,
+  title={Space-filling Latin hypercube designs for computer experiments},
+  author={Husslage, Bart GM and Rennen, Gijs and Van Dam, Edwin R and Den Hertog, Dick},
+  journal={Optimization and Engineering},
+  volume={12},
+  pages={611-630},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{hoerl1970ridge,
+  title={Ridge regression: Biased estimation for nonorthogonal problems},
+  author={Hoerl, Arthur E and Kennard, Robert W},
+  journal={Technometrics},
+  volume={12},
+  number={1},
+  pages={55-67},
+  year={1970},
+  publisher={Taylor and Francis}
+}
+
+@Book{fes,
+  Author = {Kuhn, Max and Johnson, Kjell},
+  Publisher = {CRC Press},
+  Title = {Feature engineering and selection: A practical approach for predictive models},
+  Year = {2019}
+}
+
+@book{gramacy2020surrogates,
+  title={Surrogates: Gaussian process modeling, design, and optimization for the applied sciences},
+  author={Gramacy, Robert B},
+  year={2020},
+  publisher={CRC press}
+}
+
+@book{rasmussen2006gaussian,
+  title={Gaussian processes for machine learning},
+  author={Rasmussen, Carl Edward and Williams, Christopher KI and others},
+  volume={1},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{kuhn2014futility,
+  title={Futility analysis in the cross-validation of machine learning models},
+  author={Kuhn, Max},
+  journal={arXiv},
+  year={2014}
+}
